    - Fixed turrets losing damage_dealt statistics when upgraded by research
  Changes:
    - Added entity-name localization entries for all turret variants to ensure proper display in technology tooltips
    - Rocket and tesla turret range research automatically loads when Space Age DLC is installed
---------------------------------------------------------------------------------------------------
Version: 1.0.8
Date: 31. 01. 2026
  Bugfixes:
    - Actually fixed turrets losing damage research bonuses after range research completion
    - Fixed fast_replaceable_group conflicts with mods like Bob's Warfare
  Changes:
    - Added data-final-fixes.lua to extend damage research technologies to include turret variants
    - Damage technologies now explicitly target variant turrets with turret-attack effects
    - Fast_replaceable_group now reads from base turret instead of overwriting it for better mod compatibility
---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: 31. 01. 2026
  Bugfixes:
    - Fixed turrets losing damage research bonuses after range research completion (Space Age compatibility issue)
  Changes:
    - Added explicit effect_receiver preservation to ensure variants inherit damage bonuses from research
    - Added optional dependencies for bobplates, bobwarfare, and lilys-incendiaries for better mod compatibility
    - Initial attempt to fix damage research bonus issue with effect_receiver preservation
---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 25. 01. 2026
  Bugfixes:
    - Fixed incorrect API usage for prototype checking (was causing crashes on research completion)
    - Fixed incorrect fast_replace parameter usage (was passing entity instead of boolean)
    - Fixed circuit-controlled turrets becoming permanently disabled after upgrade
  Changes: