@@ -85,3 +85,8 @@ tesla-turret-range-5=Increases the attack range of all tesla turrets by +3 tiles
 
 [technology-effect]
 turret-range-bonus=Turret range: __1__ tiles
+
+[mod-message]
+turret-range-research-upgrade-complete=All __1__s upgraded! Range bonus: +__2__ tiles (__3__ turrets upgraded)
+turret-range-research-prototype-missing=Could not upgrade turret: prototype '__1__' not found. Please report this issue.
+turret-range-research-upgrade-failed=Could not upgrade turret at (__1__, __2__) to '__3__'. Turret remains unchanged.
